# ShellShock

./: CMakeLists.txt  README.md
archive/: README.md
header/: and.h  base.h  command.h  connector.h  exit.h  or.h  semicolon.h  testing.h
src/: and.cpp  command.cpp  connector.cpp  exit.cpp  main.cpp  makefile  or.cpp  semicolon.cpp  testing.cpp
tests/: append_redirect.txt  append_redirect_test.sh  command.sh  command.txt  exit_beginning.sh  exit_beginning.txt  exit_end.sh  exit_end.txt  exit_middle.sh  exit_middle.txt  input_redirect.txt  input_redirect_test.sh  multiple_command.sh  multiple_commands.txt  output_redirect.txt  output_redirect_test.sh  parentheses_commands.sh  parentheses_commands.txt  pipe.txt  pipe_test.sh  single_command.sh  single_command.txt  test.cpp  test_commands.sh  test_commands.txt
